--- a/Game.html
+++ b/Game.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
 <body>
     <h1>The RPG RPG</h1>
