--- a/Game.html
+++ b/Game.html
@@ -18,6 +18,7 @@
 
     <p id="PlayerHP"></p>
     <p id="MonsterHP"></p>
+    <p id="MonsterDescription"></p>
 
     <p id="Gold">Gold: 0</p>
     <button id="PreviousMonster">Previous Monster</button> <button id="NextMonster">Next Monster</button>
