--- a/Ending.html
+++ b/Ending.html
@@ -6,11 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="IntroStyle.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <script src="Ending.js"></script>
 </head>
 <body>
     <p>Thanks to your RPG, and the Kingdoms concerningly lenient gun control laws, evil has been vanquished.</p>
     <p>You have gone down in History as a great Hero, ridding the Kingdom of evil.</p>
     <p>At last, your Destiny has been fulfilled.</p>
-    <a href="./Game.html" style="background-color: white; color: black;">Start over</a>
+    <a href="./Game.html" style="background-color: white; color: black;" id="PrestigeMessage">Start over (Gain one Level of Prestige)</a>
 </body>
 </html>
