--- a/Game.html
+++ b/Game.html
@@ -23,7 +23,7 @@
     <button onclick="Prestige()" style="visibility: hidden;" id="PrestigeButton">Prestige</button>
 
     <p id="Gold">Gold: 0</p>
-    <button id="PreviousMonster">Previous Monster</button> <button id="NextMonster">Next Monster</button> <button id="LockMonster" onclick="ToggleLockMonster()" id="LockMonster">Lock Monster</button>
+    <button id="PreviousMonster">Previous Monster</button> <button id="NextMonster">Next Monster</button> <button id="LockMonster" onclick="ToggleLockMonster()" id="LockMonster">Lock Monster</button> <button id="NoAscension" style="visibility: hidden;" onclick="TogglenoAscension()">Don't Ascend</button>
     <br>
     <button id="Attack">Fire!</button>
     <p id="MessageLog">Nothing has happened so far.</p>
