--- a/game/Game.html
+++ b/game/Game.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
-    <script src="Prestige.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <link rel="stylesheet" href="../styles/style.css">
+    <script src="../js/main.js"></script>
+    <script src="../js/Prestige.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico?">
 </head>
 <body>
     <h1>The RPG RPG</h1>
