--- a/game/Ending.html
+++ b/game/Ending.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="IntroStyle.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <script src="Ending.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico?">
+    <script src="../js/Ending.js"></script>
 </head>
 <body>
     <p>Thanks to your RPG, and the Kingdoms concerningly lenient gun control laws, evil has been vanquished.</p>
