--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="IntroStyle.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <link rel="stylesheet" href="./styles/IntroStyle.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico?">
 </head>
 <body>
     <p>The Kingdom has been overrun by Monsters, Towns are being set ablaze.</p>
     <p>Luckily, you have inherited your Grandfathers RPG.</p>
     <p>You will use the Powers of the almighty RPG to vanquish evil and restore peace.</p>
     <p>Welcome to the RPG RPG.</p>
-    <a href="./Game.html" style="background-color: white; color: black;">Fulfill your Destiny.</a>
+    <a href="./game/Game.html" style="background-color: white; color: black;">Fulfill your Destiny.</a>
 </body>
 </html>
