fix it this time

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p>Luckily, you have inherited your Grandfathers RPG.</p>
     <p>You will use the Powers of the almighty RPG to vanquish evil and restore peace.</p>
     <p>Welcome to the RPG RPG.</p>
-    <a href="/game/Game.html" style="background-color: white; color: black;">Fulfill your Destiny.</a>
+    <a href="https://tim404567.github.io/game/Game.html" style="background-color: white; color: black;">Fulfill your Destiny.</a>
 </body>
 </html>
