--- a/game/Ascend.html
+++ b/game/Ascend.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+	<link rel="stylesheet" href="../styles/IntroStyle.css">
 </head>
 <body>
     <p>After countless repetitions of the cycle, you have finally gained greater Power.</p>
